--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -55,6 +55,8 @@ eng:
         # hoe: "Biner"
         # implant: "Planter"
         kill: "Kill"
+        # lubricate: "Lubrifier"
+        # make_up: "Composer"
         # manage: "Gérer"
         # milk: "Traire"
         move: "Move"
@@ -62,6 +64,7 @@ eng:
         # pick: "Cueillir"
         plow: "Plow"
         produce: "Produce"
+        # repair: "Réparer"
         sow: "Sow"
         spray: "Spray"
         spread: "Spread"
@@ -1128,12 +1131,15 @@ eng:
         # password: "Mot de passe"
       item_lists: #?
       items:
+        # cattling_number: "Numéro de détenteur"
+        # cattling_root_number: "Numéro racine du troupeau"
         # charentes_alliance_extranet_username: "Login Extranet Charentes alliance "
         # husbandry_owner_number: "Code éleveur propriétaire"
         # lilco_labratory_code: "Code laboratoire LILCO"
         # msa_username: "Login MSA"
         # pacage_number: "Numéro de PACAGE"
         # password: "Mot de passe"
+        # synel_username: "Login Synel"
       # name: "Type d'identifiant"
     identifiers: #?
     incidents: #?
@@ -1210,6 +1216,9 @@ eng:
         # fertility_index: "Index de fertilité"
         # figure: "Forme"
         freezing_point_temperature: "Freezing point temperature"
+        # geolocation: "Geolocalisation"
+        # grains_area_density: "Densité de grains par surface"
+        # grains_count: "Nombre de grains"
         ground_appearance: "Ground appearance" #?
         healthy: "Animal disease state"
         # height: "Hauteur"
@@ -1430,7 +1439,12 @@ eng:
       choices:
         approach: #?
         data_acces_method: #?
-      items: #?
+      items:
+        # charentes_alliance_extranet: "Charentes alliance extranet"
+        # lilco: "Lilco"
+        # msa: "Msa"
+        # synel: "Synel"
+        # telepac: "Telepac"
     nmp_methods:
       items: #?
     nmp_poitou_charentes_abacus_1: #?
@@ -1480,7 +1494,9 @@ eng:
         # animal_illness_treatment: "Traitement des maladies animales"
         # animal_preventive_medicine_admission: "Traitement préventif des maladies animales"
         # animal_production: "Productions animales"
+        # building_maintenance: "Maintenance des bâtiments"
         enrichment: "Enrichment" #?
+        # equipment_maintenance: "Maintenance des équipements"
         feeding: "Feeding" #?
         # fermentation: "Fermentation"
         # grinding: "Broyage"
@@ -1490,6 +1506,8 @@ eng:
         # hoeing: "Binage"
         # implant: "Plantation"
         # implantation: "Implantation d’une culture"
+        # installation_maintenance: "Maintenance des installations"
+        # maintenance: "Maintenance"
         # milk_production: "Production laitière"
         # oviparous_birth: "Reproduction (ovipare)"
         # plant_fertilisation: "Fertilisation"
@@ -1661,6 +1679,7 @@ eng:
         # bean_crop: "Culture de haricot"
         # beet_crop: "Culture de betterave"
         # black_valley_land_parcel: "Parcelle de terre noire de vallées"
+        # bolt: "Boulon"
         # brassicaceae_fungicide: "Fongicide colza"
         # building: "Bâtiment"
         # building_division: "Pièce ou zone d’un bâtiment"
@@ -1750,6 +1769,7 @@ eng:
         # hoe: "Bineuse"
         # horse_manure: "Fumier de cheval"
         # horsebean_crop: "Culture de féverolle"
+        # hydraulic_oil: "Fluide hydraulique"
         # hydromorph_sandy_clay_loam_land_parcel: "Parcelle sablo-argileuse hydromorphe"
         # implanter: "Planteuse"
         # insecticide: "Insecticide"
@@ -1776,6 +1796,7 @@ eng:
         # mixture_crop: "Culture mixte"
         # mixture_seed: "Semence mixte"
         # molluscicide: "Molluscicide"
+        # motor_oil: "Huile moteur"
         # mower: "Faucheuse"
         # mud: "Boue"
         # natural_water: "Eau de pluie / du puit"
@@ -1937,6 +1958,7 @@ eng:
         # hen_band: "Bande de gallinacé"
         # herbicide: "Herbicide"
         # hoe: "Bineuse"
+        # hydraulic_oil: "Huile hydraulique"
         # implanter: "Planteuse"
         # insecticide: "Insecticide"
         # irrigation_water: "Eau (irrigation)"
@@ -1946,11 +1968,14 @@ eng:
         # male_young_cow: "Taurillon"
         # manager: "Responsable"
         # manure_division: "Zone fumière"
+        # mechanic: "Mécanisien"
+        # mechanic_item: "Pièce mécanique"
         milk: "Milk"
         # milk_tank: "Tank à lait"
         # mineral_cleaner: "Nettoyant chimique"
         # mixed_chemical_fertilizer: "Mélange d’engrais"
         # molluscicide: "Molluscicide"
+        # motor_oil: "Huile moteur"
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie ou de puit"
         # organic_fertilizer: "Engrais organique"
@@ -2160,11 +2185,13 @@ eng:
         # meter_per_second: "Métre par seconde"
         # microgram: "Microgramme"
         # microgram_per_liter: "Microgramme par litre"
+        # milliampere: "Milliampere"
         # milligram: "Milligramme"
         # milligram_per_liter: "Milligramme par litre"
         # milliliter: "Millilitre"
         # millimeter: "Millimètre"
         # million: "Million"
+        # millisecond: "Millisecond"
         # minute: "Minute"
         # mole: "Mole"
         # parts_per_million: "Partie par millions (ppm)"
@@ -2177,6 +2204,7 @@ eng:
         square_meter: "Square meter"
         # ten: "Dix"
         # thousand: "Millier"
+        # thousand_per_hectare: "Millier par hectare"
         # thousand_per_hectogram: "Millier par hectogramme"
         # thousand_per_kilogram: "Millier par kilogramme"
         # thousand_per_liter: "Millier par litre"
@@ -2305,6 +2333,7 @@ eng:
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
         # isengrain: "Isengrain"
+        # item: "Pièce"
         # juglandaceae: "Juglandaceae"
         # juglans: "Juglans"
         # karur: "Karur"
@@ -2341,6 +2370,7 @@ eng:
         # muscadelle_blanc: "Muscadelle blanc"
         # nicotiana: "Tabac"
         # numida: "Numididae"
+        # oil: "Huile"
         # oratorio: "Oratorio"
         organic_matter: "Organic matter"
         # oryza: "Riz"
