--- a/config/locales/eng/procedures.yml
+++ b/config/locales/eng/procedures.yml
@@ -34,14 +34,17 @@ eng:
     # base-calving_one: "Vêlage unique"
     # base-calving_twin: "Vêlage jumeaux"
     # base-direct_silage: "Ensilage direct"
+    # base-fuel_up: "Plein de carburant"
     # base-grains_harvest: "Moisson"
     # base-hoeing: "Binage"
     # base-indirect_silage: "Ensilage indirect"
+    # base-item_replacement: "Remplacement de pièce"
     # base-mammal_herd_milking: "Traite d'un troupeau"
     # base-mammal_milking: "Traite d'un animal"
     # base-manual_vine_harvest: "Vendange manuelle"
     # base-mecanical_vine_harvest: "Vendange mécanique"
     # base-mineral_fertilizing: "Fertilisation minérale"
+    # base-oil_replacement: "Vidange d'huile"
     # base-organic_fertilizing: "Fertilisation organique"
     # base-partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
     # base-plant_grinding: "Broyage de végétaux"
@@ -69,6 +72,8 @@ eng:
     # first_child: "Premier nouveau né"
     # forager: "Ensileuse"
     # forager_driver: "Conducteur d'ensileuse"
+    # fuel: "Carburant"
+    # fuel_to_input: "Carburant mis"
     # grains: "Grains"
     # grape_picker: "Vendangeur"
     # grape_reaper: "Machine à vendanger"
@@ -79,6 +84,8 @@ eng:
     # implanter_man: "Planteur"
     # implanter_tool: "Équipement de plantation"
     # insecticide_to_input: "Insecticide à distribuer"
+    # item: "Pièce"
+    # item_to_change: "Pièce changée"
     # land_parcel: "Parcelle"
     # mammal: "Animal"
     # mammal_herd: "Troupeau à traire"
@@ -86,6 +93,7 @@ eng:
     # mammal_to_milk: "Animal à traire"
     # manure: "Fumier"
     # manure_to_spread: "Fumier à épandre"
+    # mechanic: "Mécanisien"
     # medicine: "Traitement"
     # medicine_to_give: "Traitement à donner"
     # milk: "Lait"
@@ -93,6 +101,8 @@ eng:
     # mother_animal: "Mère"
     # mower: "Faucheuse"
     # mower_driver: "Conducteur de faucheuse"
+    # oil: "Huile"
+    # oil_to_input: "Huile mise"
     # plant: "Culture végétale"
     # plants: "Plants"
     # plants_to_fix: "Plants à implanter"
