--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -149,6 +149,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -185,6 +186,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -385,6 +387,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -421,6 +424,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -621,6 +625,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -657,6 +662,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -940,6 +946,9 @@ fra:
         fertility_index: "Index de fertilité"
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
+        geolocation: "Geolocalisation"
+        grains_area_density: "Densité de grains par surface"
+        grains_count: "Nombre de grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -1119,6 +1128,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -1155,6 +1165,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -1425,6 +1436,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -1461,6 +1473,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -1753,12 +1766,15 @@ fra:
         specifications: "Spécifications"
     identifier:
       nature:
+        cattling_number: "Numéro de détenteur"
+        cattling_root_number: "Numéro racine du troupeau"
         charentes_alliance_extranet_username: "Login Extranet Charentes alliance "
         husbandry_owner_number: "Code éleveur propriétaire"
         lilco_labratory_code: "Code laboratoire LILCO"
         msa_username: "Login MSA"
         pacage_number: "Numéro de PACAGE"
         password: "Mot de passe"
+        synel_username: "Login Synel"
     immatter:
       variety:
         acetal: "Acetal"
@@ -1869,6 +1885,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -1905,6 +1922,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -2003,14 +2021,17 @@ fra:
         base-calving_one: "Vêlage unique"
         base-calving_twin: "Vêlage jumeaux"
         base-direct_silage: "Ensilage direct"
+        base-fuel_up: "Plein de carburant"
         base-grains_harvest: "Moisson"
         base-hoeing: "Binage"
         base-indirect_silage: "Ensilage indirect"
+        base-item_replacement: "Remplacement de pièce"
         base-mammal_herd_milking: "Traite d'un troupeau"
         base-mammal_milking: "Traite d'un animal"
         base-manual_vine_harvest: "Vendange manuelle"
         base-mecanical_vine_harvest: "Vendange mécanique"
         base-mineral_fertilizing: "Fertilisation minérale"
+        base-oil_replacement: "Vidange d'huile"
         base-organic_fertilizing: "Fertilisation organique"
         base-partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
         base-plant_grinding: "Broyage de végétaux"
@@ -2039,6 +2060,8 @@ fra:
         first_child: "Premier nouveau né"
         forager: "Ensileuse"
         forager_driver: "Conducteur d'ensileuse"
+        fuel: "Carburant"
+        fuel_to_input: "Carburant mis"
         grains: "Grains"
         grape_picker: "Vendangeur"
         grape_reaper: "Machine à vendanger"
@@ -2049,6 +2072,8 @@ fra:
         implanter_man: "Planteur"
         implanter_tool: "Équipement de plantation"
         insecticide_to_input: "Insecticide à distribuer"
+        item: "Pièce"
+        item_to_change: "Pièce changée"
         land_parcel: "Parcelle"
         mammal: "Animal"
         mammal_herd: "Troupeau à traire"
@@ -2056,6 +2081,7 @@ fra:
         mammal_to_milk: "Animal à traire"
         manure: "Fumier"
         manure_to_spread: "Fumier à épandre"
+        mechanic: "Mécanisien"
         medicine: "Traitement"
         medicine_to_give: "Traitement à donner"
         milk: "Lait"
@@ -2063,6 +2089,8 @@ fra:
         mother_animal: "Mère"
         mower: "Faucheuse"
         mower_driver: "Conducteur de faucheuse"
+        oil: "Huile"
+        oil_to_input: "Huile mise"
         plant: "Culture végétale"
         plants: "Plants"
         plants_to_fix: "Plants à implanter"
@@ -2213,6 +2241,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -2249,6 +2278,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -2449,6 +2479,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -2485,6 +2516,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -2827,6 +2859,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -2863,6 +2896,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -3063,6 +3097,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -3099,6 +3134,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -3190,7 +3226,12 @@ fra:
         zone: "Zone physique"
         zone_property_title: "Titre de propriété terrienne"
     net_service:
-
+      reference_name:
+        charentes_alliance_extranet: "Charentes alliance extranet"
+        lilco: "Lilco"
+        msa: "Msa"
+        synel: "Synel"
+        telepac: "Telepac"
     operation_task:
       nature:
         assisted_reading_task: "%{reporter} mesure %{indicator} avec %{tool}"
@@ -3348,6 +3389,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -3384,6 +3426,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -3584,6 +3627,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -3620,6 +3664,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -3820,6 +3865,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -3856,6 +3902,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -4055,6 +4102,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -4091,6 +4139,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -4291,6 +4340,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -4327,6 +4377,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -4527,6 +4578,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -4563,6 +4615,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -4698,6 +4751,7 @@ fra:
         hen_band: "Bande de gallinacé"
         herbicide: "Herbicide"
         hoe: "Bineuse"
+        hydraulic_oil: "Huile hydraulique"
         implanter: "Planteuse"
         insecticide: "Insecticide"
         irrigation_water: "Eau (irrigation)"
@@ -4707,11 +4761,14 @@ fra:
         male_young_cow: "Taurillon"
         manager: "Responsable"
         manure_division: "Zone fumière"
+        mechanic: "Mécanisien"
+        mechanic_item: "Pièce mécanique"
         milk: "Lait"
         milk_tank: "Tank à lait"
         mineral_cleaner: "Nettoyant chimique"
         mixed_chemical_fertilizer: "Mélange d’engrais"
         molluscicide: "Molluscicide"
+        motor_oil: "Huile moteur"
         mower: "Faucheuse"
         natural_water: "Eau de pluie ou de puit"
         organic_fertilizer: "Engrais organique"
@@ -4848,6 +4905,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -4884,6 +4942,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -5117,6 +5176,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -5153,6 +5213,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -5352,6 +5413,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -5388,6 +5450,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -5501,6 +5564,9 @@ fra:
         fertility_index: "Index de fertilité"
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
+        geolocation: "Geolocalisation"
+        grains_area_density: "Densité de grains par surface"
+        grains_count: "Nombre de grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -5593,6 +5659,9 @@ fra:
         fertility_index: "Index de fertilité"
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
+        geolocation: "Geolocalisation"
+        grains_area_density: "Densité de grains par surface"
+        grains_count: "Nombre de grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -5772,6 +5841,7 @@ fra:
         insecta: "Insecte"
         insecticide: "Produit insecticide"
         isengrain: "Isengrain"
+        item: "Pièce"
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
@@ -5808,6 +5878,7 @@ fra:
         muscadelle_blanc: "Muscadelle blanc"
         nicotiana: "Tabac"
         numida: "Numididae"
+        oil: "Huile"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
         oryza: "Riz"
@@ -5920,6 +5991,9 @@ fra:
         fertility_index: "Index de fertilité"
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
+        geolocation: "Geolocalisation"
+        grains_area_density: "Densité de grains par surface"
+        grains_count: "Nombre de grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -6012,6 +6086,9 @@ fra:
         fertility_index: "Index de fertilité"
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
+        geolocation: "Geolocalisation"
+        grains_area_density: "Densité de grains par surface"
+        grains_count: "Nombre de grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
