--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -19,6 +19,8 @@ spa:
         # hoe: "Biner"
         # implant: "Planter"
         # kill: "Tuer"
+        # lubricate: "Lubrifier"
+        # make_up: "Composer"
         # manage: "Gérer"
         # milk: "Traire"
         # move: "Se déplacer"
@@ -26,6 +28,7 @@ spa:
         # pick: "Cueillir"
         # plow: "Labourer"
         # produce: "Produire"
+        # repair: "Réparer"
         # sow: "Semer"
         # spray: "Pulvériser"
         # spread: "Épandre"
@@ -1077,12 +1080,15 @@ spa:
         # password: "Mot de passe"
       item_lists: #?
       items:
+        # cattling_number: "Numéro de détenteur"
+        # cattling_root_number: "Numéro racine du troupeau"
         # charentes_alliance_extranet_username: "Login Extranet Charentes alliance "
         # husbandry_owner_number: "Code éleveur propriétaire"
         # lilco_labratory_code: "Code laboratoire LILCO"
         # msa_username: "Login MSA"
         # pacage_number: "Numéro de PACAGE"
         # password: "Mot de passe"
+        # synel_username: "Login Synel"
       # name: "Type d'identifiant"
     identifiers: #?
     indicators:
@@ -1131,6 +1137,9 @@ spa:
         # fertility_index: "Index de fertilité"
         # figure: "Forme"
         # freezing_point_temperature: "Point de solidification"
+        # geolocation: "Geolocalisation"
+        # grains_area_density: "Densité de grains par surface"
+        # grains_count: "Nombre de grains"
         # healthy: "Bonne santé"
         # height: "Hauteur"
         # horizontal_rotation: "Rotation horizontale"
@@ -1347,7 +1356,12 @@ spa:
       choices:
         approach: #?
         data_acces_method: #?
-      items: #?
+      items:
+        # charentes_alliance_extranet: "Charentes alliance extranet"
+        # lilco: "Lilco"
+        # msa: "Msa"
+        # synel: "Synel"
+        # telepac: "Telepac"
     nmp_methods:
       items: #?
     nmp_poitou_charentes_abacus_1: #?
@@ -1396,6 +1410,8 @@ spa:
         # animal_illness_treatment: "Traitement des maladies animales"
         # animal_preventive_medicine_admission: "Traitement préventif des maladies animales"
         # animal_production: "Productions animales"
+        # building_maintenance: "Maintenance des bâtiments"
+        # equipment_maintenance: "Maintenance des équipements"
         # fermentation: "Fermentation"
         # grinding: "Broyage"
         # growth_control: "Contrôle de croissance"
@@ -1404,6 +1420,8 @@ spa:
         # hoeing: "Binage"
         # implant: "Plantation"
         # implantation: "Implantation d’une culture"
+        # installation_maintenance: "Maintenance des installations"
+        # maintenance: "Maintenance"
         # milk_production: "Production laitière"
         # oviparous_birth: "Reproduction (ovipare)"
         # plant_fertilisation: "Fertilisation"
@@ -1571,6 +1589,7 @@ spa:
         # bean_crop: "Culture de haricot"
         # beet_crop: "Culture de betterave"
         # black_valley_land_parcel: "Parcelle de terre noire de vallées"
+        # bolt: "Boulon"
         # brassicaceae_fungicide: "Fongicide colza"
         # building: "Bâtiment"
         # building_division: "Pièce ou zone d’un bâtiment"
@@ -1660,6 +1679,7 @@ spa:
         # hoe: "Bineuse"
         # horse_manure: "Fumier de cheval"
         # horsebean_crop: "Culture de féverolle"
+        # hydraulic_oil: "Fluide hydraulique"
         # hydromorph_sandy_clay_loam_land_parcel: "Parcelle sablo-argileuse hydromorphe"
         # implanter: "Planteuse"
         # insecticide: "Insecticide"
@@ -1686,6 +1706,7 @@ spa:
         # mixture_crop: "Culture mixte"
         # mixture_seed: "Semence mixte"
         # molluscicide: "Molluscicide"
+        # motor_oil: "Huile moteur"
         # mower: "Faucheuse"
         # mud: "Boue"
         # natural_water: "Eau de pluie / du puit"
@@ -1831,6 +1852,7 @@ spa:
         # hen_band: "Bande de gallinacé"
         # herbicide: "Herbicide"
         # hoe: "Bineuse"
+        # hydraulic_oil: "Huile hydraulique"
         # implanter: "Planteuse"
         # insecticide: "Insecticide"
         # irrigation_water: "Eau (irrigation)"
@@ -1840,11 +1862,14 @@ spa:
         # male_young_cow: "Taurillon"
         # manager: "Responsable"
         # manure_division: "Zone fumière"
+        # mechanic: "Mécanisien"
+        # mechanic_item: "Pièce mécanique"
         # milk: "Lait"
         # milk_tank: "Tank à lait"
         # mineral_cleaner: "Nettoyant chimique"
         # mixed_chemical_fertilizer: "Mélange d’engrais"
         # molluscicide: "Molluscicide"
+        # motor_oil: "Huile moteur"
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie ou de puit"
         # organic_fertilizer: "Engrais organique"
@@ -2037,11 +2062,13 @@ spa:
         # meter_per_second: "Métre par seconde"
         # microgram: "Microgramme"
         # microgram_per_liter: "Microgramme par litre"
+        # milliampere: "Milliampere"
         # milligram: "Milligramme"
         # milligram_per_liter: "Milligramme par litre"
         # milliliter: "Millilitre"
         # millimeter: "Millimètre"
         # million: "Million"
+        # millisecond: "Millisecond"
         # minute: "Minute"
         # mole: "Mole"
         # parts_per_million: "Partie par millions (ppm)"
@@ -2054,6 +2081,7 @@ spa:
         # square_meter: "Mètre carré"
         # ten: "Dix"
         # thousand: "Millier"
+        # thousand_per_hectare: "Millier par hectare"
         # thousand_per_hectogram: "Millier par hectogramme"
         # thousand_per_kilogram: "Millier par kilogramme"
         # thousand_per_liter: "Millier par litre"
@@ -2182,6 +2210,7 @@ spa:
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
         # isengrain: "Isengrain"
+        # item: "Pièce"
         # juglandaceae: "Juglandaceae"
         # juglans: "Juglans"
         # karur: "Karur"
@@ -2218,6 +2247,7 @@ spa:
         # muscadelle_blanc: "Muscadelle blanc"
         # nicotiana: "Tabac"
         # numida: "Numididae"
+        # oil: "Huile"
         # oratorio: "Oratorio"
         # organic_matter: "Matière organique"
         # oryza: "Riz"
